# QuickShare

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  Logger.cpp  logger.hpp
src/gui/: CMakeLists.txt  ClickableLabel.cpp  ClickableLabel.hpp  CustomButton.cpp  CustomButton.hpp  FileSelectionSection.cpp  FileSelectionSection.hpp  FileTransferManager.cpp  FileTransferManager.hpp  InfoSection.cpp  InfoSection.hpp  MainWindow.cpp  MainWindow.hpp  PeerInfoSection.cpp  PeerInfoSection.hpp  PeerInfoWidget.cpp  PeerInfoWidget.hpp  PeerListWidget.cpp  PeerListWidget.hpp  SettingsWidget.cpp  SettingsWidget.hpp
src/network/: CMakeLists.txt  ChunkSizeOptimizer.cpp  ChunkSizeOptimizer.hpp  FileChunker.cpp  FileChunker.hpp  FileSystemManager.cpp  FileSystemManager.hpp  FileTransfer.cpp  FileTransfer.hpp  FileTransferModule.cpp  FileTransferModule.hpp  Message.hpp  MessageHandler.cpp  MessageHandler.hpp  MessageHeader.hpp  NetworkManager.cpp  NetworkManager.hpp  NetworkSettings.hpp  P2PNode.cpp  P2PNode.hpp  Peer.cpp  Peer.hpp  PeerConnection.cpp  PeerConnection.hpp  TextMessage.cpp  TextMessage.hpp
src/network/Message/: ChunkMessage.cpp  ChunkMessage.hpp  ChunkMetrics.cpp  ChunkMetrics.hpp  FileMetadata.cpp  FileMetadata.hpp  Message.hpp  TextMessage.cpp  TextMessage.hpp
